# ai_qmx_helpdesk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  clode.sh  pyproject.toml  requirements-optional.txt  requirements.txt
.claude/: README.commands.md  settings.json
.claude/commands/: add_ci.md  add_cli_subcommand.md  apply_patch.md  bump_version.md  docstring_audit.md  feature.md  fix_ci.md  hotfix.md  new_config_key.md  new_module.md  new_test.md  refactor.md  release_prep.md
.github/: PULL_REQUEST_TEMPLATE.md
doc/: getty.txt
scripts/: bump_version.py
src/ai_qmx_helpdesk/: __init__.py  __main__.py  cli.py  config_manager.py  main.py  nlp.py  rag_db.py
tests/: sanity_check_db.py  test_cli_ragdb.py  test_config_manager.py  test_nlp.py  test_rag_db.py
tools/: yaml_to_py.py
